@@ -15,7 +15,7 @@ import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.math.BigDecimal;
 import java.time.LocalDateTime;
-import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
@@ -43,20 +43,19 @@ class MovementServiceImplTest {
     @BeforeEach
     void setUp() {
         movementCreateDto = new MovementCreateDto();
-        movementCreateDto.setCuentaId(1L);
+        movementCreateDto.setCuentaId("123456");
         movementCreateDto.setTipoMovimiento(Movement.MovementType.CREDITO);
         movementCreateDto.setValor(BigDecimal.valueOf(100.00));
         movementCreateDto.setDescripcion("Deposit");
 
         account = new Account();
-        account.setId(1L);
         account.setNumeroCuenta("123456");
         account.setSaldoActual(BigDecimal.valueOf(1000.00));
         account.setEstado(true);
 
         movement = new Movement();
         movement.setId(1L);
-        movement.setCuentaId(account.getId());
+        movement.setNumeroCuenta(account.getNumeroCuenta());
         movement.setFecha(LocalDateTime.now());
         movement.setTipoMovimiento(Movement.MovementType.CREDITO);
         movement.setValor(BigDecimal.valueOf(100.00));
@@ -67,7 +66,7 @@ class MovementServiceImplTest {
     @Test
     void whenCreateCreditMovement_thenReturnMovementResponseDto() {
         // Given
-        when(accountRepository.findById(1L)).thenReturn(Optional.of(account));
+        when(accountRepository.findByNumeroCuenta("123456")).thenReturn(Optional.of(account));
         when(movementRepository.save(any(Movement.class))).thenReturn(movement);
 
         // When
@@ -77,9 +76,9 @@ class MovementServiceImplTest {
         assertThat(result).isNotNull();
         assertThat(result.getTipoMovimiento()).isEqualTo(Movement.MovementType.CREDITO);
         assertThat(result.getValor()).isEqualByComparingTo(BigDecimal.valueOf(100.00));
-        assertThat(result.getCuentaId()).isEqualTo(1L);
+        assertThat(result.getCuentaId()).isEqualTo("123456");
 
-        verify(accountRepository).findById(1L);
+        verify(accountRepository).findByNumeroCuenta("123456");
         verify(movementRepository).save(any(Movement.class));
         verify(accountRepository).save(any(Account.class));
     }
@@ -92,12 +91,12 @@ class MovementServiceImplTest {
 
         Movement debitMovement = new Movement();
         debitMovement.setId(2L);
-        debitMovement.setCuentaId(account.getId());
+        debitMovement.setNumeroCuenta(account.getNumeroCuenta());
         debitMovement.setTipoMovimiento(Movement.MovementType.DEBITO);
         debitMovement.setValor(BigDecimal.valueOf(50.00));
         debitMovement.setSaldo(BigDecimal.valueOf(950.00));
 
-        when(accountRepository.findById(1L)).thenReturn(Optional.of(account));
+        when(accountRepository.findByNumeroCuenta("123456")).thenReturn(Optional.of(account));
         when(movementRepository.save(any(Movement.class))).thenReturn(debitMovement);
 
         // When
@@ -108,7 +107,7 @@ class MovementServiceImplTest {
         assertThat(result.getTipoMovimiento()).isEqualTo(Movement.MovementType.DEBITO);
         assertThat(result.getValor()).isEqualByComparingTo(BigDecimal.valueOf(50.00));
 
-        verify(accountRepository).findById(1L);
+        verify(accountRepository).findByNumeroCuenta("123456");
         verify(movementRepository).save(any(Movement.class));
         verify(accountRepository).save(any(Account.class));
     }
@@ -119,14 +118,14 @@ class MovementServiceImplTest {
         movementCreateDto.setTipoMovimiento(Movement.MovementType.DEBITO);
         movementCreateDto.setValor(BigDecimal.valueOf(2000.00));
 
-        when(accountRepository.findById(1L)).thenReturn(Optional.of(account));
+        when(accountRepository.findByNumeroCuenta("123456")).thenReturn(Optional.of(account));
 
         // When & Then
         assertThatThrownBy(() -> movementService.createMovement(movementCreateDto))
                 .isInstanceOf(RuntimeException.class)
                 .hasMessageContaining("funds");
 
-        verify(accountRepository).findById(1L);
+        verify(accountRepository).findByNumeroCuenta("123456");
         verify(movementRepository, never()).save(any(Movement.class));
         verify(accountRepository, never()).save(any(Account.class));
     }
@@ -134,52 +133,52 @@ class MovementServiceImplTest {
     @Test
     void whenCreateMovementWithNonExistentAccount_thenThrowException() {
         // Given
-        when(accountRepository.findById(999L)).thenReturn(Optional.empty());
-        movementCreateDto.setCuentaId(999L);
+        when(accountRepository.findByNumeroCuenta("999L")).thenReturn(Optional.empty());
+        movementCreateDto.setCuentaId("999L");
 
         // When & Then
         assertThatThrownBy(() -> movementService.createMovement(movementCreateDto))
                 .isInstanceOf(RuntimeException.class)
                 .hasMessageContaining("999");
 
-        verify(accountRepository).findById(999L);
+        verify(accountRepository).findByNumeroCuenta("999L");
         verify(movementRepository, never()).save(any(Movement.class));
     }
 
     @Test
     void whenGetMovementsByAccountId_thenReturnMovementsList() {
         // Given
-        List<Movement> movements = Arrays.asList(movement);
-        when(movementRepository.findByCuentaId(1L)).thenReturn(movements);
+        List<Movement> movements = Collections.singletonList(movement);
+        when(movementRepository.findByNumeroCuenta("1L")).thenReturn(movements);
 
         // When
-        List<MovementResponseDto> result = movementService.getMovementsByAccountId(1L);
+        List<MovementResponseDto> result = movementService.getMovementsByAccountId("1L");
 
         // Then
         assertThat(result).hasSize(1);
-        assertThat(result.get(0).getCuentaId()).isEqualTo(1L);
+        assertThat(result.getFirst().getCuentaId()).isEqualTo("123456");
 
-        verify(movementRepository).findByCuentaId(1L);
+        verify(movementRepository).findByNumeroCuenta("1L");
     }
 
     @Test
     void whenGetMovementsByAccountIdEmpty_thenReturnEmptyList() {
         // Given
-        when(movementRepository.findByCuentaId(999L)).thenReturn(Arrays.asList());
+        when(movementRepository.findByNumeroCuenta("999L")).thenReturn(List.of());
 
         // When
-        List<MovementResponseDto> result = movementService.getMovementsByAccountId(999L);
+        List<MovementResponseDto> result = movementService.getMovementsByAccountId("999L");
 
         // Then
         assertThat(result).isEmpty();
-        verify(movementRepository).findByCuentaId(999L);
+        verify(movementRepository).findByNumeroCuenta("999L");
     }
 
     @Test
     void whenCreateMovementWithZeroAmount_thenThrowException() {
         // Given
         movementCreateDto.setValor(BigDecimal.ZERO);
-        when(accountRepository.findById(1L)).thenReturn(Optional.of(account));
+        when(accountRepository.findByNumeroCuenta("123456")).thenReturn(Optional.of(account));
 
         // When & Then
         assertThatThrownBy(() -> movementService.createMovement(movementCreateDto))
@@ -201,12 +200,12 @@ class MovementServiceImplTest {
 
         Movement savedMovement = new Movement();
         savedMovement.setId(1L);
-        savedMovement.setCuentaId(account.getId());
+        savedMovement.setNumeroCuenta(account.getNumeroCuenta());
         savedMovement.setValor(creditAmount);
         savedMovement.setTipoMovimiento(Movement.MovementType.CREDITO);
         savedMovement.setSaldo(initialBalance.add(creditAmount));
 
-        when(accountRepository.findById(1L)).thenReturn(Optional.of(account));
+        when(accountRepository.findByNumeroCuenta("123456")).thenReturn(Optional.of(account));
         when(movementRepository.save(any(Movement.class))).thenReturn(savedMovement);
 
         // When
@@ -232,12 +231,12 @@ class MovementServiceImplTest {
 
         Movement savedMovement = new Movement();
         savedMovement.setId(1L);
-        savedMovement.setCuentaId(account.getId());
+        savedMovement.setNumeroCuenta(account.getNumeroCuenta());
         savedMovement.setValor(debitAmount);
         savedMovement.setTipoMovimiento(Movement.MovementType.DEBITO);
         savedMovement.setSaldo(initialBalance.subtract(debitAmount.abs()));
 
-        when(accountRepository.findById(1L)).thenReturn(Optional.of(account));
+        when(accountRepository.findByNumeroCuenta("123456")).thenReturn(Optional.of(account));
         when(movementRepository.save(any(Movement.class))).thenReturn(savedMovement);
 
         // When
@@ -256,7 +255,7 @@ class MovementServiceImplTest {
     void whenCreateMovementWithInactiveAccount_thenThrowException() {
         // Given
         account.setEstado(false);
-        when(accountRepository.findById(1L)).thenReturn(Optional.of(account));
+        when(accountRepository.findByNumeroCuenta("123456")).thenReturn(Optional.of(account));
 
         // When & Then
         assertThatThrownBy(() -> movementService.createMovement(movementCreateDto))
